--- a/lean/lake-manifest.json
+++ b/lean/lake-manifest.json
@@ -1,1 +1,5 @@
-{"version": 6, "packagesDir": "lake-packages", "packages": [], "name": "lean"}
+{"version": "1.1.0",
+ "packagesDir": ".lake/packages",
+ "packages": [],
+ "name": "lean",
+ "lakeDir": ".lake"}
